--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 anyhow = "1.0.75"
 base64 = "0.21.4"
 sha1 = "0.10.6"
+tokio = { version = "1.32.0", features = ["full"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
